# ATaRVa-opt

./: Dockerfile  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt
ATARVA/: baseline.py  cigar_utils.py  consensus.py  cstag_utils.py  genotype.py  genotype_utils.py  locus_utils.py  md_utils.py  somatic_utils.py  sub_operation_utils.py  tamatr.py  vcf_writer.py
Catalogues/: TRExplorer.repeat_catalog_v2.hg38.1_to_1000bp_motifs.ATaRVa.bed.gz.tbi  adotto_TRregions_v1.2_2.9M.bed.gz.tbi  adotto_repeats.hg38_0.9M.bed.gz.tbi  atarva_strchive_pathogenic_hg38.bed.gz.tbi
docs/: genotype_usage.md
