[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ATaRVa"
version = "0.7.1"
description = "Analysis of Tandem Repeats Variations"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Divya Tej Sowpati", email = "tej@ccmb.res.in" }
]
maintainers = [
  {name = "Akshay Kumar Avvaru", email = "avvaru@ccmb.res.in"},
  {name = "Abishek Kumar", email = "abishekks@csirccmb.org"}
]

keywords = ["tandem repeats", "repeats", "long reads", "ONT", "PacBio", "satellites", "vntr", "tr", "microsatellites", "macrosatellites", "str", "imperfect repeats", "complex repeats", "nested repeats", "haplotyping",
            "targeted sequencing", "amplicon", "mosaicism", "somatic instability", "motif-analysis", "motif copy", "methylation level", "methylation pattern", "5mC", "modified bases", "motif decomposition", "repeat interruption"]
dependencies = [
    'numpy==1.26.4',
    'pyabpoa>=1.5.3',
    'pysam>=0.22.1',
    'scikit-learn>=1.4.1',
    'scipy>=1.12.0',
    'threadpoolctl>=3.3.0',
    'tqdm>=4.66.1',
    'bitarray>=3.0.0',
    'regex>=2025.9.1',
    'hdbscan>=0.8.40',
    'polars>=1.31.0',
    'stringzilla==3.12.6'
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3.9',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]
requires-python = "==3.9"


[project.urls]
Repository = "https://github.com/sowpatilab/ATaRVa.git"

[tool.setuptools]
packages = ["ATARVA"]

[tool.setuptools.package-data]
ATARVA = ["*.so"]

[project.scripts]
atarva = "ATARVA.core:main"